@@ -2,18 +2,19 @@ package io.kestra.core.storages;
 
 import io.kestra.core.exceptions.KestraRuntimeException;
 import io.kestra.core.models.Plugin;
+import io.kestra.core.plugins.PluginIdentifier;
 import io.kestra.core.plugins.PluginRegistry;
 import io.kestra.core.plugins.RegisteredPlugin;
 import io.kestra.core.serializers.JacksonMapper;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validator;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.commons.lang3.tuple.Pair;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -22,37 +23,59 @@ import java.util.stream.Stream;
 /**
  * Factor class for constructing {@link StorageInterface} objects.
  */
-public final class StorageInterfaceFactory {
+public class StorageInterfaceFactory {
 
-    private static final Logger log = LoggerFactory.getLogger(StorageInterfaceFactory.class);
     public static final String KESTRA_STORAGE_TYPE_CONFIG = "kestra.storage.type";
+
+    private final PluginRegistry pluginRegistry;
+    private final Validator validator;
+
+    public StorageInterfaceFactory(final PluginRegistry pluginRegistry,
+                                   final Validator validator) {
+        this.pluginRegistry = pluginRegistry;
+        this.validator = validator;
+    }
 
     /**
      * Factory method for constructing and validating new {@link StorageInterface} of the given type with the given configuration.
      *
-     * @param pluginRegistry      The {@link PluginRegistry}. cannot be {@code null}.
-     * @param pluginId            The ID of the storage. cannot be {@code null}.
+     * @param identifier            The ID of the storage. cannot be {@code null}.
      * @param pluginConfiguration The configuration of the storage. cannot be {@code null}.
-     * @param validator           The {@link Validator}.
      * @return a new {@link StorageInterface}.
      * @throws KestraRuntimeException if no storage can be found.
      */
-    public static StorageInterface make(final PluginRegistry pluginRegistry,
-                                        final String pluginId,
-                                        final Map<String, Object> pluginConfiguration,
-                                        final Validator validator) {
-        Optional<Class<? extends StorageInterface>> optional = allStorageClasses(pluginRegistry)
-            .filter(clazz -> Plugin.getId(clazz).map(id -> id.equalsIgnoreCase(pluginId)).orElse(false))
+    public StorageInterface make(final StorageConfiguration storageConfiguration,
+                                 final String identifier,
+                                 final Map<String, Object> pluginConfiguration) {
+
+        // Passed 'identifier' can be in the form '<id>:<version>'.
+        Pair<String, String> idAndVersion = PluginIdentifier.parseIdentifier(identifier);
+
+        final String pluginId = idAndVersion.getLeft();
+        final String pluginVersion = idAndVersion.getRight();
+
+        Optional<TypeAndId> optional = allStorageClasses(pluginRegistry)
+            .filter(typeAndId -> Optional.ofNullable(typeAndId.id).map(id -> id.equalsIgnoreCase(pluginId)).orElse(false))
             .findFirst();
 
         if (optional.isEmpty()) {
-            String storageIds = getLoggableStorageIds(pluginRegistry);
-            throw new KestraRuntimeException(String.format(
-                "No storage interface can be found for '%s=%s'. Supported types are: %s", KESTRA_STORAGE_TYPE_CONFIG, pluginId, storageIds
+            String storageIds = getLoggableStorageIds();
+            throw new KestraRuntimeException(
+                "No storage interface can be found for '%s=%s'. Supported types are: %s".formatted(KESTRA_STORAGE_TYPE_CONFIG, pluginId, storageIds
             ));
         }
 
-        Class<? extends StorageInterface> pluginClass = optional.get();
+        // Find the corresponding plugin 'class'
+        final String pluginType = optional.get().type();
+
+        @SuppressWarnings("unchecked")
+        Class<? extends StorageInterface> pluginClass = (Class<? extends StorageInterface>) pluginRegistry.findClassByIdentifier(pluginVersion == null ? pluginType : pluginType + ":" + pluginVersion);
+        if (pluginClass == null) {
+            List<String> supportedVersions = pluginRegistry.getAllVersionsForType(pluginType);
+            throw new KestraRuntimeException(
+                "No storage interface can be found for '%s=%s', and version=%s. Supported versions are: %s".formatted(KESTRA_STORAGE_TYPE_CONFIG, idAndVersion.getLeft(), pluginVersion, supportedVersions)
+            );
+        }
 
         // Storage are handle as any serializable/deserialize plugins.
         StorageInterface plugin;
@@ -83,7 +106,7 @@ public final class StorageInterfaceFactory {
         }
 
         try {
-            plugin.init();
+            plugin = init(storageConfiguration, plugin);
         } catch (IOException e) {
             throw new KestraRuntimeException(String.format(
                 "Failed to initialize storage '%s'. Error: %s", pluginId, e.getMessage()), e
@@ -92,27 +115,36 @@ public final class StorageInterfaceFactory {
         return plugin;
     }
 
-    public static String getLoggableStorageIds(final PluginRegistry pluginRegistry) {
+    protected StorageInterface init(final StorageConfiguration storageConfiguration,
+                                    final StorageInterface plugin) throws IOException {
+        plugin.init();
+        return plugin;
+    }
+
+    public String getLoggableStorageIds() {
         return allIdsFor(allStorageClasses(pluginRegistry));
     }
 
     /**
      * @return all plugin classes for the {@link StorageInterface}s.
      */
-    private static Stream<Class<? extends StorageInterface>> allStorageClasses(final PluginRegistry pluginRegistry) {
+    private static Stream<TypeAndId> allStorageClasses(final PluginRegistry pluginRegistry) {
         return pluginRegistry.plugins()
             .stream()
             .map(RegisteredPlugin::getStorages)
-            .flatMap(List::stream);
+            .flatMap(List::stream)
+            .map(clazz -> new TypeAndId(clazz.getName(), Plugin.getId(clazz).orElse(null)));
     }
 
     /**
      * @return all plugin identifier for the {@link StorageInterface}s.
      */
-    private static String allIdsFor(final Stream<Class<? extends StorageInterface>> classes) {
+    private static String allIdsFor(final Stream<TypeAndId> classes) {
         return classes
-            .map(Plugin::getId)
-            .flatMap(Optional::stream)
+            .map(TypeAndId::id)
+            .filter(Objects::nonNull)
             .collect(Collectors.joining(",", "[", "]"));
     }
+
+    private record TypeAndId(String type, String id) {}
 }
